test/sema/typeck/function/as-identifier.dora
fn foo() {}
fn bar() { foo; }

//====================
// error: value expected
// --> as-identifier.dora:2:12
//  | fn foo() {}
//  | fn bar() { foo; }
//               ~~~
//  | 
// 1 error found.
